--- a/package.json
+++ b/package.json
@@ -37,6 +37,11 @@
     ]
   },
   "devDependencies": {
+    "css-loader": "^7.1.2",
+    "node-sass": "^7.0.3",
+    "postcss-loader": "^8.1.1",
+    "resolve-url-loader": "^5.0.0",
+    "sass-loader": "^16.0.0",
     "tailwindcss": "^3.4.1"
   }
 }
